# graptor

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
bench/: APR_vary.C  APRv.C  BFSBool.C  BFSLVL_narrow.C  BFSLVLv.C  BFSv.C  BFv.C  CCv.C  CMakeLists.txt  DSSSP.C  FMv.C  GC_JP_fusion.C  GC_ecl.C  GC_fusion.C  GC_gm3p.C  GC_gm3p_new.C  KC_bucket.C  MISv.C  PR_vary.C  PRv.C  Test1.C  buckets.h  check.h  driver.C  path.h  unique.h
bench/scripts/: CMakeLists.txt
bench/scripts/fusion/: CMakeLists.txt  build_avx512.sh.in  build_settings.sh  fusion_avx512_arg.sh.in  fusion_avx512_lib.sh.in  gapbs_lib.sh.in  gbbs_arg.sh.in  gbbs_lib.sh.in  r_graptor.sh
comb/: CMakeLists.txt  MC.C  MCE.C  blocked.C  dense.C  intersect.C  mce_lut.C  reorder_kcore.h
comb/scripts/: CMakeLists.txt  MC.sh  MCE.sh  MC_base.sh  MC_order.sh  MC_subproblem.sh  blanusa.sh  build_avx512.sh.in  build_settings.sh  mc_avx2_arg.sh.in  mc_avx2_lib.sh.in  mc_avx512_arg.sh.in  mc_avx512_lib.sh.in  mc_base_arg.sh.in  mc_base_lib.sh.in  mce_avx512_arg.sh.in  mce_avx512_lib.sh.in  mce_blanusa_arg.sh  mce_blanusa_avx512_arg.sh  mce_blanusa_avx512_arg.sh.in  mce_blanusa_avx512_lib.sh  mce_blanusa_avx512_lib.sh.in  mce_blanusa_lib.sh  mce_gms_arg.sh  mce_gms_lib.sh  scalability.sh  scalability_blanusa.sh  scalability_gms.sh  subproblem.sh
examples/: ex_emap.hh
include/graptor/: addrxl.h  api.h  bitfield.h  cmdline.h  config.h.in  customfp.h  encoding.h  frontier.h  frontier_impl.h  graptor.h  itraits.h  longint.h  longint_impl.h  mm.h  partitioner.h  primitives.h  reuse.h  timer.h  utils.h  vcustomfp.h  vmap_timing.h
include/graptor/api/: edgeprop.h  fusion.h  utils.h  vertexprop.h
include/graptor/backend/: backend.h  cilk.h  openmp.h  parlay.h  sequential.h
include/graptor/config/: reset.h
include/graptor/container/: array_slice.h  bitset.h  concatenate_iterator.h  conditional_iterator.h  difference_iterator.h  double_index_edge_iterator.h  dual_set.h  generic_edge_iterator.h  hash_fn.h  hash_set.h  hash_set_cuckoo.h  hash_set_cuckoo_bitmask.h  hash_set_hopscotch.h  hash_set_hopscotch_delta.h  hash_table.h  index_range.h  intersect.h  maybe_dual_set.h  range_iterator.h  sort.h  transform_iterator.h
include/graptor/dsl/: ast.h  ast_accum.h  aval.h  edgemap.h  frontier_wrap.h  primitives.h  printer.h  simd_vector.h  value_map.h  vertexmap.h  vmap_utils.h
include/graptor/dsl/ast/: binop.h  constant.h  ctrl.h  decl.h  dfsaop.h  memref.h  redop.h  ternop.h  unop.h  value.h
include/graptor/dsl/comp/: accum.h  cache.h  extract_lane.h  extract_mask.h  frontier_select.h  insert_mask.h  is_benign_race.h  is_idempotent.h  licm.h  rewrite_accum.h  rewrite_incseq.h  rewrite_internal.h  rewrite_mask.h  rewrite_redop_to_store.h  rewrite_reduce.h  rewrite_scalarize.h  transform_nt.h
include/graptor/dsl/emap/: GraphCOO.h  GraphCSx_csc.h  GraphCSx_csr.h  GraptorCSCDataParCached.h  GraptorCSCDataParNotCached.h  GraptorCSCVReduceCached.h  GraptorCSCVReduceNotCached.h  GraptorCSRDataParCached.h  GraptorCSRDataParNotCached.h  GraptorCSRVPushCached.h  GraptorCSRVPushNotCached.h  VEBOSlimSell.h  edgechunk.h  emap_scan.h  fusion.h  scalar.h  types.h  utils.h  work_list.h
include/graptor/dsl/eval/: environment.h  evaluator.h  ptrset.h
include/graptor/frontier/: frontier.h  impl.h  type.h
include/graptor/graph/: CGraphCSRSIMDDegreeMixed.h  CGraphCSRVPush.h  CGraphCSx.h  CGraphCSxSIMDDegree.h  CGraphCSxSIMDDegreeDelta.h  CGraphCSxSIMDDegreeDeltaMixed.h  CGraphCSxSIMDDegreeMixed.h  CGraphVEBOGraptor.h  EIDRemapper.h  GraphCOO.h  GraphCSR.h  GraphCSx.h  GraphCSxWB.h  GraphGG.h  GraphGGVEBO.h  GraptorDataParPull.h  GraptorDataParPush.h  GraptorDef.h  VEBOReorder.h  cgraph.h  gtraits.h  partitioning.h  remap.h
include/graptor/graph/contract/: build.h  clique.h  contract.h  edge_cover.h  path.h  star.h  vertex_set.h
include/graptor/graph/simple/: bitconstruct.h  blocked.h  conditional_iterator.h  csx.h  csxd.h  cutout.h  dense.h  dicsx.h  double_index_edge_iterator.h  generic_edge_iterator.h  hadj.h  hadjt.h  hash_table.h  hashed_set.h  range_iterator.h  utils.h  xp_set.h
include/graptor/graph/transform/: rmself.h
include/graptor/legacy/: IO.h  gettime.h  graph-numa.h  ligra-numa.h  papi_code.h  parallel.h  quickSort.h  utils.h
include/graptor/mm/: allocation.h  buffer.h  methods.h  mm.h  track.h
include/graptor/simd/: decl.h  mask.h  mask_ref.h  ops.h  ops2.h  ops_mask.h  reduction.h  simd.h  vector.h  vector_ref.h
include/graptor/stat/: bootstrap.h  timing.h  vfdt.h  welford.h
reproduce/: ICS22.sh  README.md
reproduce/lib/: LICENSE-CilkPlusRuntime.txt
src/: constants.C  ub_alltzcnt.C  ub_lane.C  ub_lane0.C
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  create_bench.sh
tools/: CMakeLists.txt  CheckGraph.C  CleanGraph.C  CvtBinToEdgeList.C  CvtBinToGrazelle.C  CvtBinToText.C  CvtBinToV4.C  CvtEIDWidth.C  CvtFriendster.C  CvtLigra.C  CvtMtxToBin.C  CvtTextToBin.C  CvtToCSV.C  CvtToPDG.C  CvtToPDG_linked.C  CvtToPDG_v2.C  CvtToPDG_v3.C  CvtToTranspose.C  CvtToUndir.C  CvtTwitter.C  CvtV4ToBin.C  GenWeights.C  IsEqual.C  IsUndir.C  MCE.C  RmDupEdges.C  RmSelfEdges.C  RndSelect.C  graptor_tree.sh  interposer.c  intersect.C
