function(graptor_create_tool tool)
    add_executable(${tool} ${tool}.C)
    set_target_properties(${tool} PROPERTIES COMPILE_FLAGS ${graptor_cflags})
    target_link_libraries(${tool} ${EXTRA_LIBS} graptorlib)
endfunction()

graptor_create_tool(CvtBinToEdgeList)
graptor_create_tool(CvtBinToGrazelle)
graptor_create_tool(CvtBinToText)
graptor_create_tool(CvtEIDWidth)
#graptor_create_tool(CvtFriendster)
#graptor_create_tool(CvtLigra)
graptor_create_tool(CvtTextToBin)
graptor_create_tool(CvtToCSV)
graptor_create_tool(CvtToTranspose)
graptor_create_tool(CvtToUndir)
graptor_create_tool(CvtTwitter)
#graptor_create_tool(CvtYahooWeb)
#graptor_create_tool(IsEqual)
graptor_create_tool(IsUndir)
graptor_create_tool(RmDupEdges)
