function(graptor_create_tool tool)
    add_executable(${tool} ${tool}.C)
    set_target_properties(${tool} PROPERTIES COMPILE_FLAGS ${graptor_cxxflags})
    target_link_libraries(${tool} ${EXTRA_LIBS} graptorlib)
endfunction()

graptor_create_tool(CheckGraph)
graptor_create_tool(CleanGraph)
graptor_create_tool(CvtBinToV4)
graptor_create_tool(CvtV4ToBin)
graptor_create_tool(CvtMtxToBin)
graptor_create_tool(CvtBinToEdgeList)
#graptor_create_tool(CvtBinToGrazelle)
graptor_create_tool(CvtBinToText)
graptor_create_tool(CvtEIDWidth)
#graptor_create_tool(CvtFriendster)
#graptor_create_tool(CvtLigra)
#graptor_create_tool(CvtMohsen)
#graptor_create_tool(CvtTextToBin)
graptor_create_tool(CvtToCSV)
graptor_create_tool(CvtToTranspose)
graptor_create_tool(CvtToUndir)
graptor_create_tool(CvtTwitter)
#graptor_create_tool(CvtYahooWeb)
#graptor_create_tool(IsEqual)
graptor_create_tool(IsUndir)
graptor_create_tool(RmDupEdges)
graptor_create_tool(RndSelect)

# interposer library
add_executable(interposer.so interposer.c)
set_target_properties(interposer.so
	PROPERTIES
	COMPILE_FLAGS "${graptor_cflags} -fPIC -pthread"
	LINK_FLAGS "-shared -fPIC -pthread")
target_link_libraries(interposer.so -lrt -ldl)
